refactor: reescrever emails com tables + bgcolor (máxima compatibilidade)
SOLUÇÃO DEFINITIVA para cores diferentes em mobile:

Substituir DIVs e CSS complexo por:
✓ Tables com bgcolor (Gmail mobile respeita)
✓ Inline styles simples
✓ Sem flexbox, sem grid
✓ Técnica antiga mas 100%% compatível

Todos os 4 emails reescritos:

1. Email de Confirmação:
   - Tables aninhadas para layout
   - bgcolor="#C3FF5A" no header
   - bgcolor="#16181d" no content
   - bgcolor="#0f1117" nos cards
   - Sem SVG complexo
   - Badge com borda verde

2. Email de Verificação:
   - Estrutura idêntica
   - Tables apenas
   - Cores hardcoded em bgcolor

3. Email de Boas-vindas:
   - Steps em tables
   - Círculos verdes com line-height
   - Tables para tudo

4. Email de Lembrete:
   - Alert com bgcolor
   - Info rows em tables
   - Tips com bgcolor verde escuro

Agora funciona em:
✓ Gmail app (Android/iOS)
✓ Outlook mobile
✓ Apple Mail
✓ Gmail web
✓ Qualquer cliente

Verde #C3FF5A aparece IGUAL em todos!