@@ -79,168 +79,175 @@ public class Mailer {
 
     private String buildHtmlEmail(Appointment appt, ServiceEntity svc, Barber barber, String dateHuman, String successUrl) {
         String id = appt.getId().toString();
-        String notes = appt.getNotes() == null ? "" : appt.getNotes();
+        String notesHtml = appt.getNotes() != null && !appt.getNotes().isBlank() 
+            ? String.format("""
+                <tr>
+                  <td bgcolor="#16181d" style="padding:0 40px 28px 40px">
+                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#1a231a" style="border-left:4px solid #C3FF5A;border-radius:8px">
+                      <tr>
+                        <td style="padding:20px">
+                          <div style="font-size:11px;font-weight:700;color:#C3FF5A;text-transform:uppercase;letter-spacing:1px;margin-bottom:10px;font-family:Arial,sans-serif">NOTAS ADICIONAIS</div>
+                          <div style="font-size:14px;color:#cbd4e6;font-family:Arial,sans-serif;line-height:1.6">%s</div>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                """, escapeHtml(appt.getNotes()))
+            : "";
 
-        return """
-    <!doctype html>
-    <html lang="pt">
+        return String.format("""
+<!DOCTYPE html>
+<html>
     <head>
       <meta charset="utf-8">
-      <meta name="x-apple-disable-message-reformatting">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="color-scheme" content="light only">
-      <meta name="supported-color-schemes" content="light only">
-      <title>Marcação confirmada</title>
-      <style>
-        :root{color-scheme:light only;supported-color-schemes:light only}
-        body{-webkit-text-size-adjust:100%%;-ms-text-size-adjust:100%%}
-        @media (prefers-color-scheme: dark){
-          .container{background:#16181d !important}
-          .header{background:#C3FF5A !important}
-          .brand{color:#0f1117 !important}
-          .content{background:#16181d !important}
-          .title{color:#e9eef7 !important}
-          .subtitle{color:#9ca3af !important}
-          .info-value{color:#e9eef7 !important}
-        }
-      </style>
-      <style>
-        body{margin:0;padding:0;background:#0f1117;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif}
-        .wrapper{width:100%%;background:#0f1117;padding:40px 20px}
-        .container{max-width:600px;margin:0 auto;background:#16181d;border:1px solid #2a3042;border-radius:16px;overflow:hidden}
-        .header{background:#C3FF5A;padding:40px;text-align:center}
-        .logo-icon{width:48px;height:48px;margin:0 auto 12px;color:#0f1117}
-        .brand{font-size:26px;font-weight:800;color:#0f1117;margin:0;letter-spacing:-0.5px}
-        .tagline{font-size:13px;color:rgba(15,17,23,0.6);margin:6px 0 0;font-weight:500}
-        .content{padding:40px}
-        .status-badge{display:inline-flex;align-items:center;gap:8px;background:rgba(195,255,90,0.15);border:1px solid rgba(195,255,90,0.3);color:#C3FF5A;padding:10px 20px;border-radius:24px;font-size:13px;font-weight:700;margin:0 0 28px;letter-spacing:0.5px}
-        .status-icon{width:18px;height:18px;color:#C3FF5A}
-        .title{font-size:24px;font-weight:700;color:#e9eef7;margin:0 0 12px;line-height:1.3}
-        .subtitle{color:#9ca3af;font-size:15px;line-height:1.6;margin:0 0 32px}
-        .info-card{background:rgba(0,0,0,0.3);border:1px solid #2a3042;border-radius:12px;padding:0;margin:0 0 32px;overflow:hidden}
-        .info-row{display:flex;align-items:center;padding:18px 20px;border-bottom:1px solid #2a3042}
-        .info-row:last-child{border-bottom:none}
-        .info-icon{color:#C3FF5A;margin-right:14px;display:flex;align-items:center;flex-shrink:0}
-        .info-label{color:#6b7280;font-size:12px;font-weight:600;text-transform:uppercase;letter-spacing:0.8px;min-width:100px;flex-shrink:0}
-        .info-value{color:#e9eef7;font-size:16px;font-weight:500;flex:1}
-        .highlight{color:#C3FF5A;font-weight:700}
-        .cta-container{text-align:center;margin:32px 0}
-        .cta{display:inline-block;background:#C3FF5A !important;color:#0f1117 !important;text-decoration:none !important;padding:18px 40px;border-radius:12px;font-weight:800;font-size:16px;box-shadow:0 4px 16px rgba(195,255,90,0.3);transition:all 0.2s}
-        .cta:visited{color:#0f1117 !important}
-        .cta:hover{color:#0f1117 !important}
-        .cta:active{color:#0f1117 !important}
-        .divider{height:1px;background:linear-gradient(90deg,transparent,rgba(195,255,90,0.2),transparent);margin:32px 0}
-        .note-card{background:rgba(195,255,90,0.05);border-left:4px solid #C3FF5A;padding:20px;border-radius:8px;margin:24px 0}
-        .note-icon{color:#C3FF5A;margin-bottom:8px}
-        .note-label{color:#C3FF5A;font-size:11px;font-weight:700;text-transform:uppercase;margin:0 0 10px;letter-spacing:1px}
-        .note-text{color:#cbd4e6;font-size:14px;margin:0;line-height:1.6}
-        .footer{padding:32px 40px;text-align:center;color:#6b7280;font-size:12px;line-height:1.8;border-top:1px solid #2a3042}
-        .footer-link{color:#9ca3af;text-decoration:none;transition:color 0.2s}
-        .footer-link:hover{color:#C3FF5A}
-      </style>
+  <meta name="color-scheme" content="light">
+  <meta name="supported-color-schemes" content="light">
     </head>
-    <body>
-      <div class="wrapper">
-        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%">
-          <tr><td align="center">
-            <div class="container" style="background:#16181d !important;border:1px solid #2a3042 !important">
-              <div class="header" style="background:#C3FF5A !important;padding:40px;text-align:center">
-                <svg class="logo-icon" viewBox="0 0 24 24" fill="none" stroke="#0f1117" stroke-width="2" style="color:#0f1117 !important;width:48px;height:48px;margin:0 auto 12px">
-                  <circle cx="6" cy="6" r="3"/><circle cx="6" cy="18" r="3"/>
-                  <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"/>
-                </svg>
-                <h1 class="brand" style="color:#0f1117 !important;font-size:26px;font-weight:800;margin:0;letter-spacing:-0.5px">BARBERSHOP</h1>
-                <p class="tagline" style="color:rgba(15,17,23,0.6) !important;font-size:13px;margin:6px 0 0;font-weight:500">Estilo & Tradição</p>
-              </div>
-              
-              <div class="content" style="padding:40px;background:#16181d !important">
-                <div class="status-badge" style="display:inline-flex;align-items:center;gap:8px;background:rgba(195,255,90,0.15) !important;border:1px solid rgba(195,255,90,0.3) !important;color:#C3FF5A !important;padding:10px 20px;border-radius:24px;font-size:13px;font-weight:700;margin:0 0 28px;letter-spacing:0.5px">
-                  <svg class="status-icon" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2.5" style="color:#C3FF5A !important;width:18px;height:18px">
-                    <path d="M20 6L9 17l-5-5"/>
-                  </svg>
-                  <span style="color:#C3FF5A !important">CONFIRMADA</span>
-                </div>
-                <h2 class="title" style="color:#e9eef7 !important;font-size:24px;font-weight:700;margin:0 0 12px">A tua marcação está confirmada</h2>
-                <p class="subtitle" style="color:#9ca3af !important;font-size:15px;margin:0 0 32px">Preparámos tudo para te receber. Aqui estão os detalhes da tua visita:</p>
-                
-                <div class="info-card" style="background:rgba(0,0,0,0.3) !important;border:1px solid #2a3042 !important">
-                  <div class="info-row" style="border-bottom:1px solid #2a3042 !important">
-                    <div class="info-icon">
-                      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2" style="color:#C3FF5A !important">
-                        <rect x="3" y="4" width="18" height="18" rx="2"/><path d="M16 2v4M8 2v4M3 10h18"/>
-                      </svg>
-                    </div>
-                    <div class="info-label" style="color:#6b7280 !important">Quando</div>
-                    <div class="info-value" style="color:#C3FF5A !important;font-weight:700">%1$s</div>
-                  </div>
-                  <div class="info-row" style="border-bottom:1px solid #2a3042 !important">
-                    <div class="info-icon">
-                      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2" style="color:#C3FF5A !important">
-                        <circle cx="6" cy="6" r="3"/><circle cx="6" cy="18" r="3"/>
-                        <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"/>
-                      </svg>
-                    </div>
-                    <div class="info-label" style="color:#6b7280 !important">Serviço</div>
-                    <div class="info-value" style="color:#e9eef7 !important">%2$s <span style="color:#6b7280 !important">(%3$d min)</span></div>
-                  </div>
-                  <div class="info-row" style="border-bottom:1px solid #2a3042 !important">
-                    <div class="info-icon">
-                      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2" style="color:#C3FF5A !important">
-                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/>
-                      </svg>
-                    </div>
-                    <div class="info-label" style="color:#6b7280 !important">Barbeiro</div>
-                    <div class="info-value" style="color:#e9eef7 !important">%4$s</div>
-                  </div>
-                  <div class="info-row">
-                    <div class="info-icon">
-                      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2" style="color:#C3FF5A !important">
-                        <path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"/>
-                        <circle cx="7" cy="7" r="1"/>
-                      </svg>
-                    </div>
-                    <div class="info-label" style="color:#6b7280 !important">Referência</div>
-                    <div class="info-value" style="color:#e9eef7 !important">#%5$s</div>
-                  </div>
-                </div>
-                
-                %6$s
-                
-                <div class="cta-container">
-                  <a href="%7$s" class="cta" style="color:#0f1117 !important;background:#C3FF5A !important;text-decoration:none !important">
-                    <span style="color:#0f1117 !important">Ver marcação completa</span>
-                  </a>
-                </div>
-                
-                <div class="divider"></div>
-                
-                <p style="color:#9ca3af;font-size:14px;text-align:center;margin:0">
-                  Precisas de alterar algo? <a href="mailto:geral@barbershop.pt" style="color:#C3FF5A;text-decoration:none;font-weight:600">Contacta-nos</a>
-                </p>
-              </div>
-              
-              <div class="footer">
-                <strong style="color:#e9eef7">Barbershop</strong><br>
-                Rua Principal, 123, Lisboa<br>
-                (+351) 900 000 000<br><br>
-                <a href="#" class="footer-link">Instagram</a> · 
-                <a href="#" class="footer-link">Facebook</a> · 
-                <a href="#" class="footer-link">Website</a>
-              </div>
+<body style="margin:0;padding:0">
+  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#0f1117">
+    <tr><td align="center" style="padding:20px">
+      <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width:600px" bgcolor="#16181d">
+        
+        <!-- Header -->
+        <tr>
+          <td align="center" bgcolor="#C3FF5A" style="padding:40px">
+            <div style="font-size:26px;font-weight:800;color:#0f1117;font-family:Arial,sans-serif">BARBERSHOP</div>
+            <div style="font-size:13px;color:#0f1117;padding-top:6px;font-family:Arial,sans-serif;opacity:0.7">Estilo & Tradição</div>
+          </td>
+        </tr>
+        
+        <!-- Badge -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:40px 40px 0 40px;text-align:center">
+            <div style="display:inline-block;background-color:#1f2a1e;border:2px solid #C3FF5A;border-radius:20px;padding:10px 20px">
+              <span style="font-size:13px;font-weight:700;color:#C3FF5A;font-family:Arial,sans-serif;letter-spacing:0.5px">✓ CONFIRMADA</span>
             </div>
-          </td></tr>
-        </table>
-      </div>
+          </td>
+        </tr>
+        
+        <!-- Título -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:28px 40px 12px 40px">
+            <div style="font-size:24px;font-weight:700;color:#e9eef7;font-family:Arial,sans-serif">A tua marcação está confirmada</div>
+              </td>
+            </tr>
+            <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px">
+            <div style="font-size:15px;color:#9ca3af;font-family:Arial,sans-serif;line-height:1.6">Preparámos tudo para te receber. Aqui estão os detalhes da tua visita:</div>
+          </td>
+        </tr>
+        
+        <!-- Info Card -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 28px 40px">
+            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#0f1117" style="border:1px solid #2a3042;border-radius:12px">
+              
+              <!-- Quando -->
+              <tr>
+                <td style="padding:18px 20px;border-bottom:1px solid #2a3042">
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td width="100" style="font-size:12px;font-weight:600;color:#6b7280;text-transform:uppercase;font-family:Arial,sans-serif">QUANDO</td>
+                      <td style="font-size:16px;font-weight:700;color:#C3FF5A;font-family:Arial,sans-serif">%s</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              
+              <!-- Serviço -->
+              <tr>
+                <td style="padding:18px 20px;border-bottom:1px solid #2a3042">
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td width="100" style="font-size:12px;font-weight:600;color:#6b7280;text-transform:uppercase;font-family:Arial,sans-serif">SERVIÇO</td>
+                      <td style="font-size:16px;font-weight:500;color:#e9eef7;font-family:Arial,sans-serif">%s <span style="color:#6b7280">(%d min)</span></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              
+              <!-- Barbeiro -->
+              <tr>
+                <td style="padding:18px 20px;border-bottom:1px solid #2a3042">
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td width="100" style="font-size:12px;font-weight:600;color:#6b7280;text-transform:uppercase;font-family:Arial,sans-serif">BARBEIRO</td>
+                      <td style="font-size:16px;font-weight:500;color:#e9eef7;font-family:Arial,sans-serif">%s</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              
+              <!-- Referência -->
+              <tr>
+                <td style="padding:18px 20px">
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+                    <tr>
+                      <td width="100" style="font-size:12px;font-weight:600;color:#6b7280;text-transform:uppercase;font-family:Arial,sans-serif">REFERÊNCIA</td>
+                      <td style="font-size:16px;font-weight:500;color:#e9eef7;font-family:Arial,sans-serif">#%s</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              
+            </table>
+          </td>
+        </tr>
+        
+        %s
+        
+        <!-- Botão -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px;text-align:center">
+            <a href="%s" style="display:inline-block;background-color:#C3FF5A;color:#0f1117;text-decoration:none;padding:18px 40px;border-radius:12px;font-weight:800;font-size:16px;font-family:Arial,sans-serif">Ver marcação completa</a>
+          </td>
+        </tr>
+        
+        <!-- Divider -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px">
+            <div style="height:1px;background-color:#2a3042"></div>
+          </td>
+        </tr>
+        
+        <!-- Contacto -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px;text-align:center">
+            <div style="font-size:14px;color:#9ca3af;font-family:Arial,sans-serif">
+              Precisas de alterar algo? <a href="mailto:geral@barbershop.pt" style="color:#C3FF5A;text-decoration:none;font-weight:600">Contacta-nos</a>
+            </div>
+              </td>
+            </tr>
+        
+        <!-- Footer -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:32px 40px;text-align:center;border-top:1px solid #2a3042">
+            <div style="font-size:13px;color:#e9eef7;font-weight:700;font-family:Arial,sans-serif;margin-bottom:8px">Barbershop</div>
+            <div style="font-size:12px;color:#6b7280;font-family:Arial,sans-serif;line-height:1.8">
+              Rua Principal, 123, Lisboa<br>
+              (+351) 900 000 000<br><br>
+              <a href="#" style="color:#9ca3af;text-decoration:none">Instagram</a> · 
+              <a href="#" style="color:#9ca3af;text-decoration:none">Facebook</a> · 
+              <a href="#" style="color:#9ca3af;text-decoration:none">Website</a>
+            </div>
+              </td>
+            </tr>
+        
+          </table>
+        </td></tr>
+      </table>
     </body>
     </html>
-    """.formatted(
-                dateHuman,                         // %1$s
-                svc.getName(),                     // %2$s
-                svc.getDurationMin(),              // %3$d
-                barber.getName(),                  // %4$s
-                id,                                // %5$s
-                notes.isBlank() ? "" : "<div class=\"note-card\"><svg class=\"note-icon\" width=\"18\" height=\"18\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\"><path d=\"M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z\"/><path d=\"M14 2v6h6M16 13H8M16 17H8M10 9H8\"/></svg><div class=\"note-label\">Notas adicionais</div><p class=\"note-text\">" + escapeHtml(notes) + "</p></div>", // %6$s
-                successUrl                         // %7$s
+            """,
+                dateHuman,           // %s
+                svc.getName(),       // %s
+                svc.getDurationMin(),// %d
+                barber.getName(),    // %s
+                id,                  // %s
+                notesHtml,           // %s
+                successUrl           // %s
         );
     }
 
@@ -317,107 +324,97 @@ public class Mailer {
             helper.setTo(to);
             helper.setSubject("Confirma o teu email · Barbershop");
 
-            var html = """
-      <!doctype html>
-      <html lang="pt">
-      <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="color-scheme" content="light only">
-        <meta name="supported-color-schemes" content="light only">
-        <title>Confirma o teu email</title>
-        <style>
-          :root{color-scheme:light only;supported-color-schemes:light only}
-          @media (prefers-color-scheme: dark){
-            .container{background:#16181d !important}
-            .header{background:#C3FF5A !important}
-            .content{background:#16181d !important}
-            .title{color:#e9eef7 !important}
-          }
-        </style>
-        <style>
-          body{margin:0;padding:0;background:#0f1117;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif}
-          .wrapper{width:100%%;background:#0f1117;padding:40px 20px}
-          .container{max-width:600px;margin:0 auto;background:#16181d;border:1px solid #2a3042;border-radius:16px;overflow:hidden}
-          .header{background:#C3FF5A;padding:40px;text-align:center}
-          .logo-icon{width:48px;height:48px;margin:0 auto 12px;color:#0f1117}
-          .brand{font-size:26px;font-weight:800;color:#0f1117;margin:0;letter-spacing:-0.5px}
-          .tagline{font-size:13px;color:rgba(15,17,23,0.6);margin:6px 0 0;font-weight:500}
-          .content{padding:40px;text-align:center}
-          .hero-icon{width:80px;height:80px;margin:0 auto 28px;color:#C3FF5A}
-          .title{font-size:26px;font-weight:700;color:#e9eef7;margin:0 0 16px}
-          .text{color:#9ca3af;font-size:16px;line-height:1.6;margin:0 0 36px;max-width:480px;margin-left:auto;margin-right:auto}
-          .cta-container{text-align:center;margin:36px 0}
-          .cta{display:inline-block;background:#C3FF5A !important;color:#0f1117 !important;text-decoration:none !important;padding:18px 48px;border-radius:12px;font-weight:800;font-size:16px;box-shadow:0 4px 16px rgba(195,255,90,0.3)}
-          .cta:visited{color:#0f1117 !important}
-          .cta:hover{color:#0f1117 !important}
-          .cta:active{color:#0f1117 !important}
-          .warning{background:rgba(195,255,90,0.08);border:1px solid rgba(195,255,90,0.2);border-radius:10px;padding:18px;margin:28px auto 0;max-width:400px;display:flex;align-items:center;justify-content:center;gap:10px}
-          .warning-icon{color:#C3FF5A;flex-shrink:0}
-          .warning-text{color:#cbd4e6;font-size:14px;font-weight:500;margin:0}
-          .footer{padding:32px 40px;text-align:center;color:#6b7280;font-size:12px;line-height:1.8;border-top:1px solid #2a3042}
-          .footer-link{color:#9ca3af;text-decoration:none;transition:color 0.2s}
-          .footer-link:hover{color:#C3FF5A}
-        </style>
-      </head>
-      <body>
-        <div class="wrapper">
-          <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%">
-            <tr><td align="center">
-              <div class="container" style="background:#16181d !important;border:1px solid #2a3042 !important">
-                <div class="header" style="background:#C3FF5A !important;padding:40px;text-align:center">
-                  <svg class="logo-icon" viewBox="0 0 24 24" fill="none" stroke="#0f1117" stroke-width="2" style="color:#0f1117 !important;width:48px;height:48px;margin:0 auto 12px">
-                    <circle cx="6" cy="6" r="3"/><circle cx="6" cy="18" r="3"/>
-                    <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"/>
-                  </svg>
-                  <div class="brand" style="color:#0f1117 !important;font-size:26px;font-weight:800;margin:0">BARBERSHOP</div>
-                  <p class="tagline" style="color:rgba(15,17,23,0.6) !important;font-size:13px;margin:6px 0 0">Estilo & Tradição</p>
-                </div>
-                <div class="content" style="padding:40px;background:#16181d !important;text-align:center">
-                  <svg class="hero-icon" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="1.5" style="color:#C3FF5A !important;width:80px;height:80px;margin:0 auto 28px">
-                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
-                  </svg>
-                  <h1 class="title" style="color:#e9eef7 !important;font-size:26px;font-weight:700;margin:0 0 16px">Confirma o teu email</h1>
-                  <p class="text" style="color:#9ca3af !important;font-size:16px;margin:0 0 36px">Estás quase lá! Clica no botão abaixo para verificar o teu email e ativar a tua conta na Barbershop.</p>
-                  <div class="cta-container">
-                    <a href="%s" class="cta" style="color:#0f1117 !important;background:#C3FF5A !important;text-decoration:none !important">
-                      <span style="color:#0f1117 !important">Confirmar email</span>
-                    </a>
-                  </div>
-                  <div class="warning" style="background:rgba(195,255,90,0.08) !important;border:1px solid rgba(195,255,90,0.2) !important">
-                    <svg class="warning-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2" style="color:#C3FF5A !important">
-                      <circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/>
-                    </svg>
-                    <p class="warning-text" style="color:#cbd4e6 !important;margin:0">Este link expira em 24 horas</p>
-                  </div>
-                  <p style="color:#6b7280;font-size:13px;margin:28px 0 0">Se não criaste esta conta, ignora este email.</p>
-                </div>
-                <div class="footer">
-                  <strong style="color:#e9eef7">Barbershop</strong><br>
-                  Rua Principal, 123, Lisboa<br>
-                  (+351) 900 000 000<br><br>
-                  <a href="#" class="footer-link">Instagram</a> · 
-                  <a href="#" class="footer-link">Facebook</a> · 
-                  <a href="#" class="footer-link">Website</a>
-                </div>
-              </div>
-            </td></tr>
-          </table>
-        </div>
-      </body>
-      </html>
-    """.formatted(verifyLink);
+            var html = String.format("""
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="light">
+</head>
+<body style="margin:0;padding:0">
+  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#0f1117">
+    <tr><td align="center" style="padding:20px">
+      <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width:600px" bgcolor="#16181d">
+        
+        <!-- Header -->
+        <tr>
+          <td align="center" bgcolor="#C3FF5A" style="padding:40px">
+            <div style="font-size:26px;font-weight:800;color:#0f1117;font-family:Arial,sans-serif">BARBERSHOP</div>
+            <div style="font-size:13px;color:#0f1117;padding-top:6px;font-family:Arial,sans-serif;opacity:0.7">Estilo & Tradição</div>
+          </td>
+        </tr>
+        
+        <!-- Título -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:60px 40px 20px 40px;text-align:center">
+            <div style="font-size:26px;font-weight:700;color:#e9eef7;font-family:Arial,sans-serif">Confirma o teu email</div>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 40px 40px;text-align:center">
+            <div style="font-size:16px;color:#9ca3af;font-family:Arial,sans-serif;line-height:1.6">Estás quase lá! Clica no botão abaixo para verificar o teu email e ativar a tua conta.</div>
+          </td>
+        </tr>
+        
+        <!-- Botão -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 28px 40px;text-align:center">
+            <a href="%s" style="display:inline-block;background-color:#C3FF5A;color:#0f1117;text-decoration:none;padding:18px 48px;border-radius:12px;font-weight:800;font-size:16px;font-family:Arial,sans-serif">Confirmar email</a>
+          </td>
+        </tr>
+        
+        <!-- Aviso -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 40px 40px">
+            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#1a231a" style="border:1px solid #2f4a2f;border-radius:10px">
+              <tr>
+                <td align="center" style="padding:18px;font-size:14px;color:#cbd4e6;font-family:Arial,sans-serif">
+                  <span style="color:#C3FF5A">●</span> Este link expira em <strong style="color:#e9eef7">24 horas</strong>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        
+        <!-- Nota -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px;text-align:center">
+            <div style="font-size:13px;color:#6b7280;font-family:Arial,sans-serif">Se não criaste esta conta, ignora este email.</div>
+          </td>
+        </tr>
+        
+        <!-- Footer -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:32px 40px;text-align:center;border-top:1px solid #2a3042">
+            <div style="font-size:13px;color:#e9eef7;font-weight:700;font-family:Arial,sans-serif;margin-bottom:8px">Barbershop</div>
+            <div style="font-size:12px;color:#6b7280;font-family:Arial,sans-serif;line-height:1.8">
+              Rua Principal, 123, Lisboa<br>
+              (+351) 900 000 000<br><br>
+              <a href="#" style="color:#9ca3af;text-decoration:none">Instagram</a> · 
+              <a href="#" style="color:#9ca3af;text-decoration:none">Facebook</a> · 
+              <a href="#" style="color:#9ca3af;text-decoration:none">Website</a>
+      </div>
+          </td>
+        </tr>
+        
+      </table>
+    </td></tr>
+  </table>
+</body>
+</html>
+    """, verifyLink);
 
-            var text = """
-      Confirma o teu email
-      
-      Estás quase! Para ativares a tua conta, confirma o teu email:
-      %s
-      
-      Este link expira em 24 horas.
-      
-      Barbershop
-    """.formatted(verifyLink);
+            var text = String.format("""
+Confirma o teu email
+
+Estás quase! Para ativares a tua conta, confirma o teu email:
+%s
+
+Este link expira em 24 horas.
+
+Barbershop
+    """, verifyLink);
 
             helper.setText(text, html);
             mailSender.send(mime);
@@ -436,142 +433,154 @@ public class Mailer {
             helper.setTo(to);
             helper.setSubject("Bem-vindo à Barbershop, " + clientName);
 
-            var html = """
-      <!doctype html>
-      <html lang="pt">
-      <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="color-scheme" content="light only">
-        <meta name="supported-color-schemes" content="light only">
-        <title>Define a tua senha</title>
-        <style>
-          :root{color-scheme:light only;supported-color-schemes:light only}
-          @media (prefers-color-scheme: dark){
-            .container{background:#16181d !important}
-            .header{background:#C3FF5A !important}
-            .content{background:#16181d !important}
-            .title{color:#e9eef7 !important}
-          }
-        </style>
-        <style>
-          body{margin:0;padding:0;background:#0f1117;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif}
-          .wrapper{width:100%%;background:#0f1117;padding:40px 20px}
-          .container{max-width:600px;margin:0 auto;background:#16181d;border:1px solid #2a3042;border-radius:16px;overflow:hidden}
-          .header{background:#C3FF5A;padding:40px;text-align:center}
-          .logo-icon{width:48px;height:48px;margin:0 auto 12px;color:#0f1117}
-          .brand{font-size:26px;font-weight:800;color:#0f1117;margin:0;letter-spacing:-0.5px}
-          .tagline{font-size:13px;color:rgba(15,17,23,0.6);margin:6px 0 0;font-weight:500}
-          .content{padding:40px}
-          .hero-icon{width:80px;height:80px;margin:0 auto 28px;color:#C3FF5A}
-          .title{font-size:26px;font-weight:700;color:#e9eef7;margin:0 0 16px;text-align:center}
-          .subtitle{color:#9ca3af;font-size:16px;line-height:1.6;margin:0 0 36px;text-align:center;max-width:480px;margin-left:auto;margin-right:auto}
-          .welcome-card{background:rgba(195,255,90,0.08);border:1px solid rgba(195,255,90,0.2);border-radius:12px;padding:28px;margin:0 0 32px}
-          .welcome-title{color:#C3FF5A;font-size:13px;font-weight:700;text-transform:uppercase;margin:0 0 14px;letter-spacing:1.2px;text-align:center}
-          .welcome-text{color:#cbd4e6;font-size:15px;line-height:1.7;margin:0;text-align:center}
-          .steps{margin:32px 0;background:rgba(0,0,0,0.3);border:1px solid #2a3042;border-radius:12px;padding:24px}
-          .step{display:flex;align-items:center;margin:18px 0;gap:16px}
-          .step-number{background:#C3FF5A;color:#0f1117;font-weight:800;width:36px;height:36px;border-radius:50%%;display:flex;align-items:center;justify-content:center;flex-shrink:0;font-size:16px}
-          .step-text{color:#e9eef7;font-size:15px;font-weight:500;flex:1}
-          .cta-container{text-align:center;margin:36px 0}
-          .cta{display:inline-block;background:#C3FF5A !important;color:#0f1117 !important;text-decoration:none !important;padding:18px 48px;border-radius:12px;font-weight:800;font-size:16px;box-shadow:0 4px 16px rgba(195,255,90,0.3)}
-          .cta:visited{color:#0f1117 !important}
-          .cta:hover{color:#0f1117 !important}
-          .cta:active{color:#0f1117 !important}
-          .warning{background:rgba(195,255,90,0.08);border:1px solid rgba(195,255,90,0.2);border-radius:10px;padding:18px;margin:28px auto 0;max-width:400px;display:flex;align-items:center;justify-content:center;gap:10px}
-          .warning-icon{color:#C3FF5A;flex-shrink:0}
-          .warning-text{color:#cbd4e6;font-size:14px;font-weight:500;margin:0}
-          .footer{padding:32px 40px;text-align:center;color:#6b7280;font-size:12px;line-height:1.8;border-top:1px solid #2a3042}
-          .footer-link{color:#9ca3af;text-decoration:none;transition:color 0.2s}
-          .footer-link:hover{color:#C3FF5A}
-        </style>
-      </head>
-      <body>
-        <div class="wrapper">
-          <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%">
-            <tr><td align="center">
-              <div class="container" style="background:#16181d !important;border:1px solid #2a3042 !important">
-                <div class="header" style="background:#C3FF5A !important;padding:40px;text-align:center">
-                  <svg class="logo-icon" viewBox="0 0 24 24" fill="none" stroke="#0f1117" stroke-width="2" style="color:#0f1117 !important;width:48px;height:48px;margin:0 auto 12px">
-                    <circle cx="6" cy="6" r="3"/><circle cx="6" cy="18" r="3"/>
-                    <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"/>
-                  </svg>
-                  <div class="brand" style="color:#0f1117 !important;font-size:26px;font-weight:800;margin:0">BARBERSHOP</div>
-                  <p class="tagline" style="color:rgba(15,17,23,0.6) !important;font-size:13px;margin:6px 0 0">Estilo & Tradição</p>
-                </div>
-                <div class="content" style="padding:40px;background:#16181d !important">
-                  <svg class="hero-icon" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="1.5" style="color:#C3FF5A !important;width:80px;height:80px;margin:0 auto 28px">
-                    <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
-                    <circle cx="9" cy="7" r="4"/>
-                    <path d="M22 21v-2a4 4 0 0 0-3-3.87M16 3.13a4 4 0 0 1 0 7.75"/>
-                  </svg>
-                  <h1 class="title" style="color:#e9eef7 !important;font-size:26px;font-weight:700;margin:0 0 16px;text-align:center">Olá, %1$s!</h1>
-                  <p class="subtitle" style="color:#9ca3af !important;font-size:16px;margin:0 0 36px;text-align:center">Bem-vindo à Barbershop. Criámos uma conta para ti.</p>
+            var html = String.format("""
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="light">
+</head>
+<body style="margin:0;padding:0">
+  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#0f1117">
+    <tr><td align="center" style="padding:20px">
+      <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="max-width:600px" bgcolor="#16181d">
+        
+        <!-- Header -->
+        <tr>
+          <td align="center" bgcolor="#C3FF5A" style="padding:40px">
+            <div style="font-size:26px;font-weight:800;color:#0f1117;font-family:Arial,sans-serif">BARBERSHOP</div>
+            <div style="font-size:13px;color:#0f1117;padding-top:6px;font-family:Arial,sans-serif;opacity:0.7">Estilo & Tradição</div>
+          </td>
+        </tr>
+        
+        <!-- Saudação -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:60px 40px 20px 40px;text-align:center">
+            <div style="font-size:28px;font-weight:700;color:#e9eef7;font-family:Arial,sans-serif">Olá, %s!</div>
+          </td>
+        </tr>
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px;text-align:center">
+            <div style="font-size:16px;color:#9ca3af;font-family:Arial,sans-serif">Bem-vindo à Barbershop. Criámos uma conta para ti.</div>
+          </td>
+        </tr>
+        
+        <!-- Welcome Card -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px">
+            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#1a231a" style="border:1px solid #2f4a2f;border-radius:12px">
+              <tr>
+                <td style="padding:24px;text-align:center">
+                  <div style="font-size:13px;font-weight:700;color:#C3FF5A;text-transform:uppercase;letter-spacing:1.2px;margin-bottom:12px;font-family:Arial,sans-serif">COMO COMEÇAR</div>
+                  <div style="font-size:15px;color:#cbd4e6;font-family:Arial,sans-serif;line-height:1.7">Falta apenas definires a tua senha para teres acesso completo à plataforma.</div>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        
+        <!-- Steps -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px">
+            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#0f1117" style="border:1px solid #2a3042;border-radius:12px">
+              <tr>
+                <td style="padding:24px">
+                  <!-- Step 1 -->
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" style="margin-bottom:16px">
+                    <tr>
+                      <td width="40" valign="top">
+                        <div style="background-color:#C3FF5A;color:#0f1117;font-weight:800;width:36px;height:36px;border-radius:50%%;display:flex;align-items:center;justify-content:center;font-size:16px;font-family:Arial,sans-serif;text-align:center;line-height:36px">1</div>
+                      </td>
+                      <td style="color:#e9eef7;font-size:15px;font-family:Arial,sans-serif;padding-left:16px;vertical-align:middle">Clica no botão abaixo</td>
+                    </tr>
+                  </table>
                   
-                  <div class="welcome-card" style="background:rgba(195,255,90,0.08) !important;border:1px solid rgba(195,255,90,0.2) !important">
-                    <div class="welcome-title" style="color:#C3FF5A !important">Como começar</div>
-                    <p class="welcome-text" style="color:#cbd4e6 !important">Falta apenas definires a tua senha para teres acesso completo à plataforma e poderes gerir as tuas marcações.</p>
-                  </div>
+                  <!-- Step 2 -->
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" style="margin-bottom:16px">
+                    <tr>
+                      <td width="40" valign="top">
+                        <div style="background-color:#C3FF5A;color:#0f1117;font-weight:800;width:36px;height:36px;border-radius:50%%;text-align:center;line-height:36px;font-size:16px;font-family:Arial,sans-serif">2</div>
+                      </td>
+                      <td style="color:#e9eef7;font-size:15px;font-family:Arial,sans-serif;padding-left:16px;vertical-align:middle">Define uma senha segura (mínimo 8 caracteres)</td>
+                    </tr>
+                  </table>
                   
-                  <div class="steps" style="background:rgba(0,0,0,0.3) !important;border:1px solid #2a3042 !important">
-                    <div class="step">
-                      <div class="step-number" style="background:#C3FF5A !important;color:#0f1117 !important">1</div>
-                      <div class="step-text" style="color:#e9eef7 !important">Clica no botão abaixo</div>
-                    </div>
-                    <div class="step">
-                      <div class="step-number" style="background:#C3FF5A !important;color:#0f1117 !important">2</div>
-                      <div class="step-text" style="color:#e9eef7 !important">Define uma senha segura (mínimo 8 caracteres)</div>
-                    </div>
-                    <div class="step">
-                      <div class="step-number" style="background:#C3FF5A !important;color:#0f1117 !important">3</div>
-                      <div class="step-text" style="color:#e9eef7 !important">Acede à tua conta e marca o teu próximo corte</div>
-                    </div>
-                  </div>
-                  
-                  <div class="cta-container">
-                    <a href="%2$s" class="cta" style="color:#0f1117 !important;background:#C3FF5A !important;text-decoration:none !important">
-                      <span style="color:#0f1117 !important">Definir senha</span>
-                    </a>
-                  </div>
-                  
-                  <div class="warning" style="background:rgba(195,255,90,0.08) !important;border:1px solid rgba(195,255,90,0.2) !important">
-                    <svg class="warning-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#C3FF5A" stroke-width="2" style="color:#C3FF5A !important">
-                      <circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/>
-                    </svg>
-                    <p class="warning-text" style="color:#cbd4e6 !important;margin:0">Este link expira em 48 horas</p>
-                  </div>
-                  
-                  <p style="color:#6b7280;font-size:13px;text-align:center;margin:28px 0 0">Se não pediste esta conta, ignora este email.</p>
-                </div>
-                <div class="footer">
-                  <strong style="color:#e9eef7">Barbershop</strong><br>
-                  Rua Principal, 123, Lisboa<br>
-                  (+351) 900 000 000<br><br>
-                  <a href="#" class="footer-link">Instagram</a> · 
-                  <a href="#" class="footer-link">Facebook</a> · 
-                  <a href="#" class="footer-link">Website</a>
-                </div>
-              </div>
-            </td></tr>
-          </table>
-        </div>
-      </body>
-      </html>
-    """.formatted(clientName, setPasswordLink);
+                  <!-- Step 3 -->
+                  <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%">
+                    <tr>
+                      <td width="40" valign="top">
+                        <div style="background-color:#C3FF5A;color:#0f1117;font-weight:800;width:36px;height:36px;border-radius:50%%;text-align:center;line-height:36px;font-size:16px;font-family:Arial,sans-serif">3</div>
+                      </td>
+                      <td style="color:#e9eef7;font-size:15px;font-family:Arial,sans-serif;padding-left:16px;vertical-align:middle">Acede à tua conta e marca o teu próximo corte</td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        
+        <!-- Botão -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 28px 40px;text-align:center">
+            <a href="%s" style="display:inline-block;background-color:#C3FF5A;color:#0f1117;text-decoration:none;padding:18px 48px;border-radius:12px;font-weight:800;font-size:16px;font-family:Arial,sans-serif">Definir senha</a>
+          </td>
+        </tr>
+        
+        <!-- Aviso -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 40px 40px">
+            <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%%" bgcolor="#1a231a" style="border:1px solid #2f4a2f;border-radius:10px">
+              <tr>
+                <td align="center" style="padding:18px;font-size:14px;color:#cbd4e6;font-family:Arial,sans-serif">
+                  <span style="color:#C3FF5A">●</span> Este link expira em <strong style="color:#e9eef7">48 horas</strong>
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+        
+        <!-- Nota -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:0 40px 32px 40px;text-align:center">
+            <div style="font-size:13px;color:#6b7280;font-family:Arial,sans-serif">Se não pediste esta conta, ignora este email.</div>
+          </td>
+        </tr>
+        
+        <!-- Footer -->
+        <tr>
+          <td bgcolor="#16181d" style="padding:32px 40px;text-align:center;border-top:1px solid #2a3042">
+            <div style="font-size:13px;color:#e9eef7;font-weight:700;font-family:Arial,sans-serif;margin-bottom:8px">Barbershop</div>
+            <div style="font-size:12px;color:#6b7280;font-family:Arial,sans-serif;line-height:1.8">
+              Rua Principal, 123, Lisboa<br>
+              (+351) 900 000 000<br><br>
+              <a href="#" style="color:#9ca3af;text-decoration:none">Instagram</a> · 
+              <a href="#" style="color:#9ca3af;text-decoration:none">Facebook</a> · 
+              <a href="#" style="color:#9ca3af;text-decoration:none">Website</a>
+            </div>
+          </td>
+        </tr>
+        
+      </table>
+    </td></tr>
+  </table>
+</body>
+</html>
+            """, clientName, setPasswordLink);
 
-            var text = """
-      Olá, %1$s!
-      
-      Bem-vindo à Barbershop!
-      
-      Criámos uma conta para ti. Para começares a usar, define a tua senha:
-      %2$s
-      
-      Este link expira em 48 horas.
-      
-      Até já!
-      Barbershop
-    """.formatted(clientName, setPasswordLink);
+            var text = String.format("""
+Olá, %s!
+
+Bem-vindo à Barbershop!
+
+Criámos uma conta para ti. Para começares a usar, define a tua senha:
+%s
+
+Este link expira em 48 horas.
+
+Barbershop
+    """, clientName, setPasswordLink);
 
             helper.setText(text, html);
             mailSender.send(mime);
